# roman_photoz

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  bootstrap_roman_photoz.sh  pyproject.toml  python_interface_2.py  requirements.txt  roman_phot.para  test_roman_catalog_process.py  tox.ini
.github/: labeler.yml  pull_request_template.md
.github/workflows/: build.yml  openastronomy-tox.yml  post-test-results.yml  pytest-workflow.yml  rtd.yml  run-unit-tests.yml  tests.yml
docs/: CHANGELOG.rst  CONTRIBUTING.rst  api_reference.rst  changelog.rst  conf.py  contributing.rst  create_roman_filters.rst  create_simulated_catalog.rst  index.rst  installation.rst  introduction.rst  regtest_framework.rst  roman_catalog_handler.rst  roman_catalog_process.rst  rtd_environment.yaml  usage.rst
examples/: cosmos_data.ipynb  create_roman_filters_files.ipynb  lephare.pkl  output_test_Lephare_COSMOS.hdf5  python_interface_1.py  python_interface_2.py  read_results_asdf_file.ipynb
roman_photoz/: __init__.py  __main__.py  create_roman_filters.py  create_simulated_catalog.py  default_config_file.py  logger.py  roman_catalog_handler.py  roman_catalog_process.py  test_metadata_preservation.py  untested.py  update_romanisim_catalog_fluxes.py
roman_photoz/data/: Roman_effarea_20210614.xlsx  default_roman_output.para  roman_catalog_template.asdf  roman_catalog_template.parquet
roman_photoz/regtest/: README.md  __init__.py  conftest.py  regtestdata.py  test_integration.py
roman_photoz/tests/: conftest.py  test_create_roman_filters.py  test_create_simulated_catalog.py  test_default_config_file.py  test_integration.py  test_logger.py  test_metadata_preservation.py  test_roman_catalog_handler.py  test_roman_catalog_process.py  test_update_romanisim_catalog_fluxes.py
roman_photoz/tests/data/: r00001_r0_full_270p65x70y50_cat.parquet
roman_photoz/utils/: __init__.py  roman_photoz_utils.py
scripts/: Makefile  create_asn_files.sh  create_asn_files_for_elp.sh  create_asn_files_for_mos.sh  create_asn_for_mbandcatalog.sh  create_simulated_l1_files.sh  create_skycell_asn.sh  make_romanisim_input_catalog.py  notes.md  run_elp.sh  run_mos.sh  run_romanisim.sh  simulate_and_process_l1_files.sh  update_romanisim_catalog_fluxes.py
src/: create_roman_filters.py  create_simulated_catalog.py  filters_library.py  roman_catalog_handler.py  roman_catalog_process.py
