[project]
name = "roman_photoz"
description = "Library for photometric redshift determination using data from the Nancy Grace Roman Space Telescope"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Roman calibration pipeline developers", email = "help@stsci.edu" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "asdf >=3.3.0",
    "asdf-astropy >=0.5.0",
    "astropy >=5.3.0",
    "crds >=11.16.16",
    "gwcs >=0.21.0",
    "jsonschema >=4.8",
    "numpy >=1.23",
    "photutils >=1.13.0",
    "pyparsing >=2.4.7",
    "requests >=2.26",
    "roman_datamodels>=0.22.0,<0.23.0",
    # "roman_datamodels @ git+https://github.com/spacetelescope/roman_datamodels.git",
    "scipy >=1.11",
    "stcal>=1.10.0,<1.11.0",
    # "stcal @ git+https://github.com/spacetelescope/stcal.git@main",
    "stpipe >=0.7.0,<0.8.0",
    # "stpipe @ git+https://github.com/spacetelescope/stpipe.git@main",
    "tweakwcs >=0.8.8",
    "spherical-geometry >= 1.2.22",
    "stsci.imagestats >= 1.6.3",
    "drizzle >= 1.15.0",
    "webbpsf >= 1.2.1",
    "h5py",
]
dynamic = ["version"]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
docs = [
    "matplotlib",
    "sphinx",
    "sphinx-astropy",
    "sphinx-automodapi",
    "sphinx-rtd-theme",
    "stsci-rtd-theme",
    "sphinx-autobuild",
    "tomli; python_version <=\"3.11\"",
]
test = [
    "ci-watson >=0.5.0",
    "pytest >8.0.0",
    "pytest-astropy >= 0.11.0",
    "deepdiff",
    "stpreview>=0.5.1",
]
dev = ["roman_photoz[docs,test]", "tox > 4", "pre-commit > 3"]
sdp = ["stpreview>=0.5.1"]

[project.urls]
tracker = "https://github.com/spacetelescope/roman_photoz/issues"
# documentation = "https://roman-pipeline.readthedocs.io/en/stable/"
repository = "https://github.com/spacetelescope/roman_photoz"

[build-system]
requires = ["setuptools >=60", "setuptools_scm[toml] >=3.4", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
# package_data values are glob patterns relative to each specific subpackage.
"*" = [
    "**/*.fits",
    "**/*.txt",
    "**/*.inc",
    "**/*.cfg",
    "**/*.csv",
    "**/*.yaml",
    "**/*.json",
    "**/*.asdf",
]

[tool.pytest.ini_options]
minversion = 4.6
filterwarnings = ["error::ResourceWarning"]
junit_family = "xunit2"
log_cli_level = "info"
addopts = ["--doctest-ignore-import-errors", "--color=yes"]
markers = ["soctests: run only the SOC tests in the suite."]

[tool.bandit]
skips = ["B101", "B307", "B404", "B603"]
exclude_dirs = ["examples"]

[tool.isort]
profile = "black"
filter_files = true
line_length = 88

[tool.black]
line-length = 88
force-exclude = "^/(\n  (\n      \\.eggs\n    | \\.git\n    | \\.pytest_cache\n    | \\.tox\n  )/\n)\n"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
exclude = ["jdocs", ".tox", ".eggs", "build"]
ignore = [
    "E741", # ambiguous variable name
]
extend-select = ["NPY"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]
